--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "lib/pkp"]
 	path = lib/pkp
-	url = https://github.com/pkp/pkp-lib.git
+	url = https://github.com/alvaro-ossio19/pkp-lib.git
 [submodule "plugins/generic/usageStats"]
         path = plugins/generic/usageStats
         url = https://github.com/pkp/usageStats.git
@@ -40,7 +40,7 @@
 	url = https://github.com/pkp/reviewReport
 [submodule "lib/ui-library"]
 	path = lib/ui-library
-	url = https://github.com/pkp/ui-library
+	url = https://github.com/alvaro-ossio19/ui-library
 [submodule "plugins/generic/citationStyleLanguage"]
 	path = plugins/generic/citationStyleLanguage
 	url = https://github.com/pkp/citationStyleLanguage.git
